@@ -218,6 +218,12 @@ void av_register_all(void)
     REGISTER_PROTOCOL (HTTP, http);
     REGISTER_PROTOCOL (PIPE, pipe);
     REGISTER_PROTOCOL (RTMP, rtmp);
+#if CONFIG_LIBRTMP
+    REGISTER_PROTOCOL (RTMP, rtmpt);
+    REGISTER_PROTOCOL (RTMP, rtmpe);
+    REGISTER_PROTOCOL (RTMP, rtmpte);
+    REGISTER_PROTOCOL (RTMP, rtmps);
+#endif
     REGISTER_PROTOCOL (RTP, rtp);
     REGISTER_PROTOCOL (TCP, tcp);
     REGISTER_PROTOCOL (UDP, udp);
